<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <!-- //English Strings -->


    <!-- //General Strings / Artemis Preview -->

    <string name="app_name">Artemis</string>
    <string name="lensFocalLengthMM">mm</string>
    <string name="left_roll">↶</string>
    <string name="right_roll">↷</string>
    <string name="roll_level">↔</string>
    <string name="tilt_up">↑</string>
    <string name="tilt_down">↓</string>
    <string name="tilt_level">↕</string>
    <string name="degree_symbol">°</string>

    <!-- //Artemis menu -->

    <string name="menu_camera_settings">Select Camera</string>
    <string name="menu_artemis_settings">Settings</string>
    <string name="menu_lens_settings">Select Lens</string>
    <string name="menu_artemis_gallery">Gallery</string>
    <string name="menu_artemis_help">Help</string>

    <!-- //Artemis Settings Page -->
    <string name="new_features">New features below coming soon</string>
    <string name="gps_on_off">Turn GPS On / Off</string>
    <string name="artemis_settings_title">Artemis Settings</string>
    <string name="choose_folder_for_image_saving">Image Folder Name</string>
    <string name="choose_path">Artemis</string>
    <string name="auto_exposure">Automatic Exposure</string>
    <string name="set_exposure_text">Set Exposure</string>
    <string name="set_exposure">Set Exposure</string>

    <string-array name="set_exposure_array">
        <item>-3</item>
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="set_flash_mode_text">Flash/Torch Mode</string>
    <string name="set_flash_mode_spinner">Set Flash Mode</string>

    <string-array name="set_flash_mode_array">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string name="quickshot_text">QuickShot Mode</string>
    <string name="lock_boxes_text">Lock Lens boxes</string>
    <string name="auto_white_balance">Automatic White Balance</string>
    <string name="set_white_balance_text">Set White Balance</string>
    <string name="set_white_balance">Set White Balance</string>

    <string-array name="set_white_balance">
        <item>Daylight</item>
        <item>Cloudy</item>
        <item>Flourescent</item>
        <item>Incandescent</item>
    </string-array>

    <string name="set_preview_size_text">Preview Resolution</string>
    <string name="smooth_filter_text">Smooth Image Filter</string>
    <string name="select_preview_size_text">Select Preview Resolution</string>
    <string name="heading_tilt_roll_text">Heading Options</string>
    <string name="heading_tilt_roll_promt">Select Heading Options</string>

    <string-array name="heading_tilt_roll_array">
        <item>None</item>
        <item>Heading°</item>
        <item>Heading°|Tilt°|Roll°</item>
    </string-array>
    <string-array name="heading_tilt_roll_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="save_artemis_settings">Save Artemis Settings</string>
    <string name="artemis_remote_text">Artemis Remote for Android tablets &amp; iPads</string>
    <string name="select_language_text">Select Language</string>

    <string-array name="select_language_array">

        <!-- <item>Čeština</item> -->
        <!-- <item>Dansk</item> -->
        <item>Deutsch</item>
        <item>English</item>
        <item>Español</item>
        <item>Français</item>
        <item>Italiano</item>
        <!-- <item>Nederlands</item> -->
        <!-- <item>Norsk bokmål</item> -->
        <!-- <item>Polski</item> -->
        <!-- <item>Português</item> -->
        <!-- <item>Svenska</item> -->
        <!-- <item>Türkçe</item> -->
        <!-- <item>ελληνικά</item> -->
        <item>Pусский</item>
        <item>한국어</item>
        <item>中文</item>
        <item>日本語</item>
    </string-array>
    <!-- The language codes must correspond with the above language array -->
    <string-array name="select_language_codes">

        <!-- <item>cs</item> -->
        <!-- <item>da</item> -->
        <item>de</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <!-- <item>nl</item> -->
        <!-- <item>nb</item> -->
        <!-- <item>pl</item> -->
        <!-- <item>pt</item> -->
        <!-- <item>sv</item> -->
        <!-- <item>tr</item> -->
        <!-- <item>el</item> -->
        <item>ru</item>
        <item>ko</item>
        <item>zh</item>
        <item>ja</item>
    </string-array>

    <string name="reset_device_h_and_v_angles">Reset</string>
    <string name="auto_device_h_and_v_angles">Get Device Camera Angles Automatically</string>
    <string name="manually_set_h_angle_text">Set Device Camera Horizontal Angle</string>
    <string name="manually_set_v_angle_text">Set Device Camera Vertical Angle</string>
    <string name="auto_focus_text">Auto Focus Images</string>

    <!-- //About Page -->

    <string name="artemis_about_title">About - Artemis for Android v</string>
    <string name="artemis_about_text">Artemis is a digital directors viewfinder designed
		with both cinematographers and directors in mind. Artemis works nearly
		the same way as a traditional directors viewfinder, though much more
		accurately and much more conveniently. After selecting a camera
		format, aspect ratio and lens type, Artemis uses the camera in your
		mobile device to simulate the lens views you can expect when you come
		to shoot. You can either compare all the lenses or hit zoom and the
		camera will zoom in to fill the viewfinder with the equivalent view of
		the lens you have chosen.
		What cameras are covered?

		Artemis has been
		field tested and tweaked with every camera in our database
		to make sure
		that the field of view is correct. With digital film
		cameras we found
		that relying on the information from camera
		manufacturers was not
		always wise.

		The following formats are covered so far:
		\n\nStandard and
		Super 16mm\nSuper 16mm Anamorphic\nStandard and Super 35mm\n35mm
		Anamorphic\n65mm\n35mm Digital (D-21, RED, F35, Genesis)\n2/3 Digital
		(F23, Viper)\n1/2 Digital\n1/3 Digital\nCanon 5D and 7D.\n\n
		If you
		find a format that\'s important to you is missing let us know and
		we\'ll do our best to add it in the next update.</string>
    <string name="chemical_wedding_about_text">Copyright 2010. Chemical Wedding.</string>
    <string name="loon_films_about_text">Artemis for Android was developed by Loon Films.</string>
    <string name="about_back_button">Back</string>

    <!-- //Camera Settings Page -->

    <string name="camera_settings_title">Camera Settings</string>
    <string name="custom_camera_new_camera">NEW CUSTOM CAMERA</string>
    <string name="custom_camera_options">Custom Camera Options</string>
    <string name="custom_camera_edit_camera">Edit Camera</string>
    <string name="custom_camera_delete_camera">Delete Camera</string>
    

    <!-- //Lense Settings Page -->

    <string name="lens_settings_title">Lens Settings</string>
    <string name="save_lenses">Save Lenses</string>
    <string name="no_camera_alert">Please select a camera before selecting lenses</string>

    <!-- //Save Picture Page -->

    <string name="save_picture_title">Save Picture</string>
    <string name="image_saved_success">Saving image…</string>
    <string name="saving_picture">Saving Picture</string>
    <string name="save_and_edit">Save and Edit Details</string>
    <string name="save_picture">Save Picture</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="gps_location">GPS Location Details</string>
    <string name="camera_information">Camera Information</string>
    <string name="lens_information">Lens Information</string>
    <string name="cancel">Cancel</string>
    <string name="image_description_hint">Add a description</string>
    <string name="date_and_time_text">Date and Time</string>
    <string name="h_and_v_angle_text">H and V Angle</string>
    <string name="vangle_text">V Angle</string>
    <string name="hangle_text">H Angle</string>
    <string name="tilt_and_roll_text">Tilt and Roll</string>
    <string name="compass_heading_text">Compass Heading (N,S,E,W)</string>

    <!-- //Add Custom Camera Page -->

    <string name="custom_camera_name">CUSTOM CAMERA NAME</string>
    <string name="custom_camera_distance">DISTANCE</string>
    <string name="custom_camera_width">WIDTH</string>
    <string name="custom_camera_height">HEIGHT</string>
    <string name="custom_camera_focallength">FOCAL LENGTH (MM)</string>
    <string name="update_custom_camera">Update Custom Camera</string>
    <string name="untitle_custom_cam">Untitled Custom Camera</string>
    <string name="custom_camera_error">Custom Camera Input Error</string>
    <string name="custom_camera_error_message">The was a problem adding the new custom camera.  Please verify that the input values are valid and try again.</string>
	<string name="ok">OK</string>
    
    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">Application not licensed</string>
    <string name="error_dialog_title">Application license error</string>
    <string name="unlicensed_dialog_body">This application is not licensed. Please purchase
		it from Android Market.</string>
    <string name="error_dialog_body">There was an error verifying the application
		license. If this problem persists, please contact support.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>

    <!-- Gallery related messages -->
    <string name="gallery_no_images_found">No images found</string>

</resources>