<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:fadeScrollbars="true"
	android:focusable="true" android:focusableInTouchMode="true"
	android:layout_width="fill_parent" android:layout_height="match_parent">

	<TextView
	    android:id="@+id/artemis_settings_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:gravity="center"
	    android:lines="1"
	    android:maxLines="1"
	    android:text="@string/artemis_settings_title"
	    android:textColor="@color/artemisSettingsText"
	    android:textSize="16sp" />

	<ScrollView android:layout_marginBottom="60dip" android:id="@+id/ScrollView01"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content">
		<TableLayout android:id="@+id/tableLayout1"
			android:stretchColumns="0" android:paddingLeft="15dip"
			android:paddingRight="15dip" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow16"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout16" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView16"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/choose_folder_for_image_saving"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<EditText android:layout_width="wrap_content" android:id="@+id/choose_path"
						android:layout_gravity="right" android:layout_marginLeft="20dip"
						android:layout_height="40dip" />
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow1"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout1" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView1"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/set_preview_size_text"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Spinner android:layout_marginLeft="45dip"
						android:layout_width="wrap_content" android:layout_height="45dip"
						android:id="@+id/set_preview_size_spinner" android:layout_gravity="right"
						android:paddingTop="10dip" android:prompt="@string/select_preview_size_text"></Spinner>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow2"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout2" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView2"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/auto_device_h_and_v_angles"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Button android:enabled="false" android:layout_width="wrap_content"
						android:id="@+id/reset_device_angles" android:layout_gravity="right"
						android:layout_marginLeft="10dip" android:text="@string/reset_device_h_and_v_angles"
						android:layout_height="40dip"></Button>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:enabled="true"
						android:paddingBottom="10dip" android:checked="true"
						android:layout_height="40dip" android:id="@+id/auto_device_h_and_v_angles_toggle"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow3"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout3" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView3"
						android:layout_width="wrap_content" android:layout_gravity="center_vertical"
						android:text="@string/manually_set_h_angle_text"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<EditText android:layout_width="wrap_content"
						android:text="EditText" android:layout_gravity="right"
						android:inputType="numberDecimal" android:layout_height="wrap_content"
						android:enabled="false" android:id="@+id/edit_h_angle_textedit"></EditText>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow4"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout4" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView4"
						android:layout_width="wrap_content" android:layout_gravity="center_vertical"
						android:text="@string/manually_set_v_angle_text"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<EditText android:layout_width="wrap_content"
						android:text="EditText" android:layout_gravity="right"
						android:inputType="numberDecimal" android:layout_height="wrap_content"
						android:enabled="false" android:id="@+id/edit_v_angle_textedit"></EditText>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow5"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout5" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView5"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/set_white_balance_text"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Spinner android:layout_marginLeft="20dip"
						android:layout_width="wrap_content" android:layout_height="45dip"
						android:id="@+id/settings_white_balance_spinner"
						android:layout_gravity="right" android:paddingTop="10dip"
						android:prompt="@string/set_white_balance"></Spinner>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow6"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout6" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView6"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/set_exposure_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Spinner android:layout_marginLeft="20dip"
						android:layout_width="wrap_content" android:layout_height="45dip"
						android:id="@+id/settings_exposure_spinner"
						android:layout_gravity="right" android:paddingTop="10dip"
						android:prompt="@string/set_exposure"></Spinner>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow7"
				android:layout_height="match_parent" android:paddingTop="5dip"
				android:layout_width="wrap_content">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout7" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView7"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/heading_tilt_roll_text"
						android:layout_height="wrap_content" android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Spinner android:layout_marginLeft="20dip"
						android:entries="@array/heading_tilt_roll_array"
						android:layout_width="wrap_content" android:layout_height="45dip"
						android:id="@+id/heading_tilt_roll_spinner"
						android:layout_gravity="right" android:paddingTop="10dip"
						android:prompt="@string/heading_tilt_roll_text"></Spinner>
				</LinearLayout>
			</TableRow>
			<TableRow android:id="@+id/tableRow17"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent" android:paddingBottom="5dip">
				<LinearLayout android:id="@+id/linearLayout17"
					android:orientation="horizontal" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:layout_height="wrap_content" android:id="@+id/textView17"
						android:layout_width="100dip" android:enabled="false"
						android:text="@string/auto_focus_text" android:layout_weight="2"
						android:layout_gravity="center_vertical" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_height="40dip"
						android:text="ToggleButton" android:layout_marginLeft="20dip"
						android:id="@+id/auto_focus_toggle" android:layout_width="wrap_content"
						android:paddingBottom="10dip" android:layout_gravity="right"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow11"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout11" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView11"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/smooth_filter_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:paddingBottom="10dip"
						android:layout_height="40dip" android:id="@+id/smooth_filter_toggle"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow8"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout8" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView8"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/set_flash_mode_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:enabled="false"
						android:paddingBottom="10dip" android:layout_height="40dip"
						android:id="@+id/set_flash_mode_spinner"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow9"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="match_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout9" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView9"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/quickshot_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:paddingBottom="10dip"
						android:layout_height="40dip" android:id="@+id/quickshot_toggle"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow10"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout10" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView10"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/lock_boxes_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:layout_gravity="right" android:layout_marginLeft="20dip"
						android:paddingBottom="10dip" android:layout_height="40dip"
						android:text="ToggleButton" android:id="@+id/lock_boxes_toggle"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow12"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout12" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView12"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/gps_on_off" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:paddingBottom="10dip"
						android:layout_height="40dip" android:id="@+id/settings_gps_enabled"></ToggleButton>
				</LinearLayout>
			</TableRow>
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow13"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout13" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView13"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/select_language_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<Spinner android:layout_marginLeft="20dip"
						android:entries="@array/select_language_array"
						android:layout_width="wrap_content" android:layout_height="45dip"
						android:id="@+id/select_language_spinner" android:layout_gravity="right"
						android:paddingTop="10dip" android:prompt="@string/select_language_text"></Spinner>
				</LinearLayout>
			</TableRow>
		<!-- 	<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow14"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout14" android:layout_width="fill_parent"
					android:layout_gravity="center" android:layout_height="wrap_content">
					<TextView android:textColor="#FF9933" android:id="@+id/textView14"
						android:layout_width="wrap_content" android:typeface="sans"
						android:layout_gravity="center" android:textSize="20dip"
						android:textStyle="bold" android:text="@string/new_features"
						android:layout_height="wrap_content" android:textColor="@color/artemisSettingsText"/>
				</LinearLayout>
			</TableRow>   -->
			<TableRow android:paddingBottom="5dip" android:id="@+id/tableRow15"
				android:layout_height="wrap_content" android:paddingTop="5dip"
				android:layout_width="fill_parent">
				<LinearLayout android:orientation="horizontal"
					android:id="@+id/linearLayout15" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:enabled="false" android:id="@+id/textView15"
						android:layout_width="100dip" android:layout_gravity="center_vertical"
						android:text="@string/artemis_remote_text" android:layout_height="wrap_content"
						android:layout_weight="2" android:textColor="@color/artemisSettingsText"/>
					<ToggleButton android:layout_width="wrap_content"
						android:text="ToggleButton" android:layout_gravity="right"
						android:layout_marginLeft="20dip" android:enabled="false"
						android:paddingBottom="10dip" android:layout_height="40dip"
						android:id="@+id/artemis_remote_toggle"></ToggleButton>
				</LinearLayout>
			</TableRow>
		</TableLayout>
	</ScrollView>
	<RelativeLayout android:layout_marginTop="-50dip"
		android:gravity="center" android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<LinearLayout android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:orientation="horizontal">
			<Button android:id="@+id/save_artemis_settings"
				android:layout_gravity="center" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/save_artemis_settings" />
			<View android:layout_width="50dip" android:layout_height="wrap_content" />
			<Button android:id="@+id/cancel_artemis_settings"
				android:layout_gravity="center" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/cancel" />
		</LinearLayout>
	</RelativeLayout>
</LinearLayout>